feat: add eslint, prettier, husky, commitlint, lint-staged

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,8 +4,10 @@
     "emitDeclarationOnly": true,
     "declarationMap": true,
     "outDir": "lib/types",
+    "baseUrl": "./",
+    "paths": {
+      "@/*": ["src/*"]
+    }
   },
-  "include": [
-    "./src/index.ts"
-  ],
+  "include": ["./src/index.ts"]
 }
