--- a/.prettierrc
+++ b/.prettierrc
@@ -5,6 +5,5 @@
   "tabWidth": 2,
   "semi": true,
   "bracketSpacing": true,
-  "trailingComma": "none",
-  "arrowParens": "avoid"
+  "trailingComma": "none"
 }
