--- a/package.json
+++ b/package.json
@@ -14,13 +14,34 @@
     "import": "./lib/esm/index.js"
   },
   "scripts": {
+    "prepare": "husky install",
+    "lint-staged": "lint-staged",
+    "format": "prettier --write 'src/**/*.{js,jsx,ts,tsx,css}'",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "lint-fix": "eslint --fix . --ext .js,.jsx,.ts,.tsx",
     "clean": "rimraf lib",
     "declarations": "tsc -p tsconfig.json",
     "build:esm": "cross-env BABEL_ENV=esmUnbundled babel src --extensions '.ts' --out-dir 'lib/esm' --source-maps",
     "build:cjs": "cross-env BABEL_ENV=cjs babel src --extensions '.ts' --out-dir 'lib/cjs' --source-maps",
     "build:bundles": "cross-env BABEL_ENV=esmBundled rollup -c",
     "build": "npm-run-all -l clean -p build:esm build:cjs build:bundles declarations",
+    "jest": "jest",
+    "jest:changed": "jest --onlyChanged",
+    "jest:staged": "jest --findRelatedTests --passWithNoTests",
+    "jest:watch": "jest --watch",
+    "jest:coverage": "jest --coverage",
+    "jest:coverage:watch": "jest --coverage --watch",
     "test": "jest"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx,css,json,md,mdx}": [
+      "prettier --write",
+      "git add"
+    ],
+    "*.{js,jsx,ts,tsx}": [
+      "eslint --fix",
+      "git add"
+    ]
   },
   "repository": {
     "type": "git",
@@ -36,20 +57,36 @@
   },
   "homepage": "https://github.com/remshams/node-module-esm#readme",
   "devDependencies": {
-    "@babel/cli": "^7.12.10",
-    "@babel/core": "^7.12.10",
-    "@babel/preset-env": "^7.12.11",
-    "@babel/preset-typescript": "^7.12.7",
+    "@babel/cli": "^7.20.5",
+    "@babel/core": "^7.20.5",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-typescript": "^7.18.6",
+    "@commitlint/cli": "^17.4.2",
+    "@commitlint/config-conventional": "^17.4.2",
+    "@joengsh/prettier-config": "^1.0.4",
     "@rollup/plugin-babel": "^5.2.3",
     "@rollup/plugin-node-resolve": "^13.1.3",
-    "@types/jest": "^27.4.1",
+    "@types/jest": "^29.4.0",
+    "@types/node": "^18.11.19",
+    "@typescript-eslint/eslint-plugin": "^5.51.0",
+    "@typescript-eslint/parser": "^5.51.0",
+    "babel-jest": "^29.4.1",
+    "babel-loader": "^8.3.0",
+    "babel-plugin-module-resolver": "^5.0.0",
     "cross-env": "^7.0.3",
-    "jest": "^27.5.1",
+    "eslint": "^8.34.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jest": "^26.9.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "husky": "^8.0.3",
+    "jest": "^29.4.1",
+    "lint-staged": "^13.1.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.2.1",
+    "prettier": "^2.8.3",
     "rimraf": "^3.0.2",
-    "rollup": "^2.38.4",
+    "rollup": "^2.79.1",
     "rollup-plugin-terser": "^7.0.2",
-    "typescript": "^4.1.3"
+    "typescript": "^4.9.5"
   }
 }
