--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "lint-fix": "eslint --fix . --ext .js,.jsx,.ts,.tsx",
     "clean": "rimraf lib",
-    "declarations": "tsc -p tsconfig.json",
+    "declarations": "tsc -p tsconfig.json && tsc-alias -p tsconfig.json",
     "build:esm": "cross-env BABEL_ENV=esmUnbundled babel src --extensions '.ts' --out-dir 'lib/esm' --source-maps",
     "build:cjs": "cross-env BABEL_ENV=cjs babel src --extensions '.ts' --out-dir 'lib/cjs' --source-maps",
     "build:bundles": "cross-env BABEL_ENV=esmBundled rollup -c",
@@ -86,6 +86,7 @@
     "rimraf": "^3.0.2",
     "rollup": "^2.79.1",
     "rollup-plugin-terser": "^7.0.2",
+    "tsc-alias": "^1.8.2",
     "typescript": "^4.9.5"
   }
 }
