feat: add basic api structure, host client and mock host client structure

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
-    "declaration": true,
-    "emitDeclarationOnly": true,
-    "declarationMap": true,
+    "target": "ESNext",
+    "module": "ES2015",
+    "moduleResolution": "node",
     "outDir": "lib/types",
     "baseUrl": "./",
     "paths": {
