--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "lint-fix": "eslint --fix . --ext .js,.jsx,.ts,.tsx",
     "clean": "rimraf lib",
-    "declarations": "tsc -p tsconfig.json && tsc-alias -p tsconfig.json",
+    "declarations": "tsc -p tsconfig.json --declaration --emitDeclarationOnly && tsc-alias -p tsconfig.json",
     "build:esm": "cross-env BABEL_ENV=esmUnbundled babel src --extensions '.ts' --out-dir 'lib/esm' --source-maps",
     "build:cjs": "cross-env BABEL_ENV=cjs babel src --extensions '.ts' --out-dir 'lib/cjs' --source-maps",
     "build:bundles": "cross-env BABEL_ENV=esmBundled rollup -c",
@@ -67,11 +67,15 @@
     "@commitlint/config-conventional": "^17.4.2",
     "@joengsh/prettier-config": "^1.0.4",
     "@rollup/plugin-babel": "^5.2.3",
+    "@rollup/plugin-commonjs": "^24.0.1",
+    "@rollup/plugin-json": "^6.0.0",
     "@rollup/plugin-node-resolve": "^13.1.3",
+    "@rollup/plugin-typescript": "^11.0.0",
     "@types/jest": "^29.4.0",
     "@types/node": "^18.11.19",
     "@typescript-eslint/eslint-plugin": "^5.51.0",
     "@typescript-eslint/parser": "^5.51.0",
+    "axios": "^1.3.3",
     "babel-jest": "^29.4.1",
     "babel-loader": "^8.3.0",
     "babel-plugin-module-resolver": "^5.0.0",
@@ -83,12 +87,18 @@
     "eslint-plugin-prettier": "^4.2.1",
     "husky": "^8.0.3",
     "jest": "^29.4.1",
+    "jest-fetch-mock": "^3.0.3",
     "lint-staged": "^13.1.0",
+    "msw": "^1.0.1",
+    "node-fetch": "^2.6.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.8.3",
     "rimraf": "^3.0.2",
     "rollup": "^2.79.1",
+    "rollup-plugin-node-builtins": "^2.1.2",
     "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-typescript2": "^0.34.1",
+    "ts-jest": "^29.0.5",
     "tsc-alias": "^1.8.2",
     "typescript": "^4.9.5"
   }
