--- a/example/package.json
+++ b/example/package.json
@@ -18,9 +18,14 @@
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
+    "msw": "^1.1.0",
     "rollup-plugin-visualizer": "^5.9.0",
     "typescript": "^4.9.3",
     "vite": "^4.1.0",
-    "vite-bundle-visualizer": "^0.6.0"
+    "vite-bundle-visualizer": "^0.6.0",
+    "vite-plugin-optimizer": "^1.4.2"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
