--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fe-host-connector-ts",
+  "name": "fe-host-client-ts",
   "version": "1.0.0",
   "description": "Example repository for rollup based, esm enabled node modules",
   "sideEffects": false,
@@ -75,7 +75,6 @@
     "@types/node": "^18.11.19",
     "@typescript-eslint/eslint-plugin": "^5.51.0",
     "@typescript-eslint/parser": "^5.51.0",
-    "axios": "^1.3.3",
     "babel-jest": "^29.4.1",
     "babel-loader": "^8.3.0",
     "babel-plugin-module-resolver": "^5.0.0",
